[tool]
[tool.commitizen]
name = "cz_conventional_commits"
version = "0.0.1"
tag_format = "$version"

[tool.poetry]
name = "template-python"
version = "0.1.0"
description = "To create python projects easily"
authors = ["vunk.lai <vunk.lai@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "template_python"}]

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.group.dev.dependencies]
black = "^22.8.0"
pytest = "^7.1.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
